<?xml version="1.0" encoding="UTF-8"?>
<resources>

    <string name="app_name">Travel With Me</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_image_description" />
    <string name="welcome">Welcome</string>
    <string name="my_trip_to">My Trip To:</string>
    <string name="your_next_flight_to">your next flight to:</string>
    <string name="fun_facts_about_the_city">Fun facts about the city:</string>
    <string name="your_next_event">your next event:</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="when_do_you_like_to_visit">When do you like to visit:</string>
    <string name="date">Date:</string>
    <string name="select_date">Select Date</string>
    <string name="time">Time:</string>
    <string name="select_time">Select Time</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="hotel_address">Hotel Address</string>
    <string name="check_in_date">Check-in Date</string>
    <string name="check_out_date">Check-out Date</string>
    <string name="save_hotel">Save Hotel</string>
    <string name="check_in_your_flight">Check-in your flight</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="choose_dates">Choose dates</string>
    <string name="selected_date_range">Selected Date Range</string>
    <string name="done">Done</string>
    <string name="back">back</string>
    <string name="add_item">Add Item</string>
    <string name="trip_checklist">Trip Checklist</string>
    <string name="flight_to">flight to:</string>
    <string name="departure_date">departure date</string>
    <string name="return_date">return date</string>
    <string name="close">Close</string>
    <string name="confirm">Confirm</string>
    <string name="this_trip">This trip</string>
    <string name="add_trip">New Trip</string>
    <string name="skip">Skip</string>
    <string name="my_hotels">My Hotels</string>
    <string name="delete_item">Delete item</string>
    <string name="sign_up">Sign Up</string>

    <string-array name="cities">
        <item>London</item>
        <item>Amsterdam</item>
        <item>Rome</item>
    </string-array>

    <string-array name="facts_london">
        <item>London Underground was opened in 1863 for locomotive trains. In 1890, it became the world’s first metro system when electric trains began operating.</item>
        <item>When the King is in Buckingham Palace you can see her royal flag flying from the flagpole. This flag, which is called the Royal Standard, must only be flown from buildings where the King is present.</item>
        <item>London Eye is 135 meters tall and has a diameter of 120 meters. It has 32 capsules and a ride takes 30 minutes. The entire wheel weighs more than 1,000 tons.</item>
    </string-array>

    <string-array name="facts_amsterdam">
        <item>Amsterdam has more canals than Venice and more bridges than Paris</item>
        <item>The smallest house in the world was built around 1738, and it measures only 2.02 m in width and 5 m in-depth, and has just one room per floor. Find it at the Oude Hoogstraat 22.</item>
        <item>There are 4 times more bicycles than cars in Amsterdam</item>
    </string-array>

    <string-array name="facts_rome">
        <item>Rome has 280 fountains and more than 900 churches.</item>
        <item>Law in Rome allows cats to live without disruption in the place they were born. Wild cats can be climbing the walls of the Colosseum, and sleeping among the ruins of the Forum.</item>
        <item>Rome has a museum dedicated entirely to pasta.</item>
    </string-array>
</resources>
