<?xml version="1.0" encoding="utf-8"?>

    <!-- fragment_add_edit_hotel.xml -->
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    android:background="@color/superlight">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/hotelNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hotel_name"
        android:fontFamily="@font/fredoka_medium"/>


    <EditText
        android:id="@+id/hotelAddressEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hotel_address"
        android:fontFamily="@font/fredoka_medium"/>

    <TextView
        android:id="@+id/checkInDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/check_in_date"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/checkOutDateTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_out_date"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fredoka_medium"
        android:textSize="20dp"/>

    <Button
        android:id="@+id/saveHotelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/fredoka_medium"
        android:text="@string/save_hotel"
        android:textSize="20dp"
        android:backgroundTint="@color/sandyBrown"
        android:textColor="@color/black"/>

</LinearLayout>
</ScrollView>