<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background_a">

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/fredoka_medium"
        android:textColorHint="#A5A4A4"
        android:textColor="@color/white"
        />


    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:fontFamily="@font/fredoka_medium"
        android:inputType="textPassword"
        android:layout_marginTop="16dp"
        android:textColorHint="#A5A4A4"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/fredoka_medium"
        android:textSize="20dp"
        android:backgroundTint="@color/sandyBrown"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/black" />

</LinearLayout>